chore: test create customer
